kubernetes/apps/security/glauth/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: glauth
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: glauth
      app.kubernetes.io/name: glauth
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: authelia
            app.kubernetes.io/name: authelia
      toPorts:
        - ports:
            - port: "389"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack
            app.kubernetes.io/name: prometheus
            k8s:io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "5555"
              protocol: TCP
